--- a/client/src/pages/home/HomePage.module.css
+++ b/client/src/pages/home/HomePage.module.css
@@ -1,4 +1,4 @@
-.background-pets {
+.bgPets {
     background-image: url("/images/home-page.png");
     height: 100vh;
     background-size: cover;
@@ -6,13 +6,13 @@
     background-attachment: fixed;
 }
 
-.sound-container {
+.sounds {
     display: flex;
     justify-content: space-evenly;
 }
 
-.meow-container,
-.bark-container {
+.meow,
+.bark {
     position: relative;
     border-radius: 50px;
     padding: 10px 20px;
@@ -21,25 +21,25 @@
     box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.5);
 }
 
-.meow-container {
+.meow {
     background-color: #bfc1bc9a;
     top: 35vh;
 }
 
-.bark-container {
+.bark {
     background-color: #e2e3e0a9;
     top: 20vh;
     left: -5vw;
 }
 
-.adopt-container {
+.adopt {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 87vh;
 }
 
-.btn-adopt {
+.btnAdopt {
     background-color: rgba(255, 255, 255, 0.51);
     margin-top: auto;
     padding: 15px 40px;
@@ -53,7 +53,7 @@
     text-transform: uppercase;
 }
 
-.btn-adopt:hover {
+.btnAdopt:hover {
     background-color: #ffff;
     color: rgba(32, 68, 83, 0.712);
     box-shadow: 0px 3px 20px rgba(0, 0, 0, 0.5);
