--- a/client/src/pages/adopt/AdoptHomePage.module.css
+++ b/client/src/pages/adopt/AdoptHomePage.module.css
@@ -19,16 +19,18 @@
 }
 
 .btnAllPets {
-    background-color: rgba(255, 255, 255, 0.51);
+    background-color: rgba(255, 255, 255, 0.5);
     margin-top: auto;
-    padding: 10px 30px;
-    color: rgba(176, 88, 182, 0.79);
+    padding: 5px 20px;
+    color: rgb(18, 95, 60);
+    background-color: rgba(174, 229, 123, 0.162);
     font-size: 20px;
     font-weight: bold;
-    border: 1px solid gray;
-    border-radius: 50px;
+    font-family:cursive;
+    border: 1px solid rgba(5, 108, 12, 0.621);
+    border-radius: 20px;
     transition: all 0.3s ease;
-    letter-spacing: 5px;
+    letter-spacing: 3px;
 }
 
 .btnAllPets:hover {
@@ -36,4 +38,9 @@
     color: rgb(50, 136, 173);
     box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.5);
     
+}   
+
+.card:hover {
+    transform: translateY(-10px) scale(1.1);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
 }
