enhance about us page styling

--- a/client/src/pages/home/HomePage.module.css
+++ b/client/src/pages/home/HomePage.module.css
@@ -1,5 +1,5 @@
 .bgPets {
-    background-image: url("/images/home-page.png");
+    background-image: url("/images/home-page-bg.png");
     height: 100vh;
     background-size: cover;
     background-position: center;
