--- a/client/src/pages/about/AboutUsPage.module.css
+++ b/client/src/pages/about/AboutUsPage.module.css
@@ -13,21 +13,36 @@ h2 {
     text-align: justify;
 }
 
+/* container */
 .container {
-    margin-inline-end: 30px;
-    margin-inline-start: 30px;
-    margin-top: 70px;
-    padding: 20px;
+    position: relative;
     display: flex;
     flex-direction: column;
+    z-index: 1;
+    padding: 60px;
+}
+
+.container::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url("/images/about-page-bg.jpg");
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    opacity: 0.06;
+    z-index: -1;
 }
 
 .who-we-are,
 .our-mission,
 .what-we-do {
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: 150px 150px 30px;
+    grid-template-columns: 1.8fr 0.5fr 1fr 0.5fr 1.8fr;
+    grid-template-rows: 150px 150px 40px;
     align-items: center;
     margin-bottom: 30px;
 }
@@ -36,62 +51,71 @@ h2 {
 .who-we-are .about-content {
     grid-column: 1 / 4;
     grid-row: 1/3;
-    background-color: rgba(247, 225, 225, 0.359);
-    box-shadow: 1px 1px 30px rgba(209, 151, 119, 0.5);
+    background-color: rgba(251, 243, 243, 0.9);
+    box-shadow: 15px 15px 0px rgba(224, 177, 177, 0.29);
+    /* border: 1px solid rgb(213, 165, 165); */
+    border: 2px outset rgb(249, 218, 218);
 }
 
 .who-we-are .about-image {
-    grid-column: 4 / 6;
+    grid-column: 5 / 6;
     grid-row: 1/4;
     width: 100%;
-    max-width: 300px;
+    max-width: 500px;
     justify-self: center;
-    box-shadow: 5px 10px 30px rgba(209, 151, 119, 0.8);
+    mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1) 80%, rgba(0, 0, 0, 0) 100%);
 }
 
 .who-we-are h2 {
-    color: rgba(190, 24, 24, 0.503);
+    color: rgba(190, 24, 24, 0.5);
 }
 
 
 /* Our mission */
 .our-mission .about-content {
-    /* grid-column: 1 / 3; */
     grid-column: 3 / 6;
     grid-row: 1/3;
-    background-color: rgba(197, 215, 204, 0.359);
-    box-shadow: 1px 1px 30px rgba(53, 110, 64, 0.5);
+    background-color: rgba(241, 247, 244, 0.9);
+    box-shadow: 15px 15px 0px rgba(177, 224, 182, 0.29);
+    border: 2px outset rgb(206, 237, 209);
+    padding-bottom: 50px;
 }
 
 .our-mission .about-image {
-    /* grid-column: 3 / 5; */
-    grid-column: 1 / 3;
+    grid-column: 1 / 2;
     grid-row: 1/4;
     width: 100%;
-    max-width: 300px;
-    justify-self: center;
+    max-width: 500px;
+    justify-self: start;
+
+    /* for image bottom blur */
+    /* -webkit-mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1) 80%, rgba(0, 0, 0, 0) 80%); */
+    mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1) 80%, rgba(0, 0, 0, 0) 100%);
+    /* -webkit-mask-repeat: no-repeat; */
+    /* mask-repeat: no-repeat; */
 }
 
 .our-mission h2 {
-    color: rgba(42, 84, 50, 0.503);
+    color: rgba(42, 84, 50, 0.5);
 }
 
 
 /* What we do */
 .what-we-do .about-content {
     grid-column: 1 / 4;
-    grid-row: 1/3;
-    background-color: rgba(209, 208, 231, 0.359);
-    box-shadow: 1px 1px 30px rgba(40, 52, 141, 0.5);
+    grid-row: 1 / 3;
+    background-color: rgba(242, 242, 251, 0.9);
+    box-shadow: 15px 15px 0px rgba(177, 178, 224, 0.29);
+    border: 2px outset rgb(212, 218, 245);
 }
 
 .what-we-do .about-image {
-    grid-column: 4 / 6;
-    grid-row: 1/3;
+    grid-column: 5 / 6;
+    grid-row: 1/4;
     width: 100%;
-    max-width: 300px;
+    max-width: 350px;
     justify-self: center;
-    box-shadow: 5px 10px 30px rgba(40, 52, 141, 0.538);
+    mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1) 80%, rgba(0, 0, 0, 0) 97%);
 }
 
 .what-we-do li {
@@ -100,7 +124,7 @@ h2 {
 }
 
 .what-we-do h2 {
-    color: rgba(40, 52, 141, 0.538);
+    color: rgba(40, 52, 141, 0.5);
 }
 
 /* achievements */
@@ -109,16 +133,24 @@ h2 {
 .what-we-do .achievements {
     grid-column: 1;
     font-weight: bold;
-    font-size: 1.2rem;
-    color: rgba(66, 45, 19, 0.544);
+    color: rgba(0, 0, 0, 0.763);
     display: flex;
     justify-content: space-between;
-    background-color: rgba(158, 102, 28, 0.127);
+    align-items: center;
+    background-color: rgb(252, 253, 255);
     padding: 15px 30px;
     border-radius: 50px;
+    border: solid 1px rgb(168, 168, 168);
 }
 
 .our-mission .achievements {
     grid-column: 5;
     text-align: right;
+}
+
+.who-we-are .achievements .number,
+.our-mission .achievements .number,
+.what-we-do .achievements .number {
+    font-size: x-large;
+    font-weight: lighter;
 }
